# cup_stack

./: .gitignore  AGENTS.md  README.md  SETUP_PLAN.md  find_vertical_home.py
docs/: system_architecture.html
ros2/src/: fallen-cup-recovery
ros2/src/cup_stack/: bringup_real.sh  package.xml  run_pyramid_unstack_loop.sh  setup.py
ros2/src/cup_stack/config/: moveit_py.yaml
ros2/src/cup_stack/cup_stack/: config.py  runtime.py
ros2/src/cup_stack/cup_stack/nodes/: camera_capture_node.py  cup_pyramid_node.py  cup_pyramid_select_node.py  cup_unstack_node.py  cup_unstack_select_node.py  find_vertical_home_node.py  gripper_node.py  move_cartesian_node.py  scan_node.py  scan_square_node.py  skill_api_node.py
ros2/src/cup_stack/cup_stack/skills/: config.py  pick_cup_skill.py  place_cup_at.py  place_cup_skill.py
ros2/src/cup_stack/cup_stack/tasks/: cup_pyramid.py  scan.py  scan_square.py
ros2/src/cup_stack/launch/: cameras_only.launch.py  cup_pyramid_select.launch.py  cup_unstack.launch.py  cup_unstack_select.launch.py  fallen_cup_detect.launch.py  fallen_cup_recovery.launch.py  find_vertical_home.launch.py  move_cartesian.launch.py  scan.launch.py  scan_square.launch.py  skill_api.launch.py
ros2/src/cup_stack/srv/: MoveCartesian.srv
ros2/src/cup_stack_interfaces/: CMakeLists.txt  package.xml
server/: pyproject.toml
server/server/: config.py
src/cup_stack/: package.xml  setup.py
src/cup_stack/test/: test_copyright.py  test_flake8.py
